input bug on iphone

--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -59,6 +59,7 @@
   outline: none;
   border: solid 1px #E8E8E8;
   border-radius: 3px;
+  background-color: #FFF;
 }
 
 .auth-form__input-error {
